# PJTemplate

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README_template.md  User_Rules_Template.md  User_Rules_Template_Cursor.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  scratchpad_template.md
.agents/skills/memory-system/: SKILL.md
.agents/skills/memory-system/assets/: memory_template.md
.agents/skills/reason-code/: SKILL.md
.agents/skills/reason-code/references/: document-mapping.md  reasoning-examples.md
.agents/skills/reasoning-system/: SKILL.md
.agents/skills/reasoning-system/references/: document-mapping.md  reasoning-examples.md
.agents/skills/repl-context-explorer/: SKILL.md
.agents/skills/repl-context-explorer/references/: rlm-paper.md  workflow-examples.md
.cursor/plans/: rlm_repl_skill_1d48d145.plan.md
.devcontainer/:  devcontainer.json  Dockerfile
.github/workflows/: cd.yml  ci.yml
config/: defaults.template.toml  defaults.toml
config/docs/: mkdocs.yml
config/infra/alloy/: config.alloy
config/infra/loki/: loki.yaml
config/infra/prometheus/: prometheus.yml
config/infra/tempo/: tempo.yaml
config/secrets/: README.MD
config/security/: bandit.yaml
config/security/tracee/: default-policy.yaml
docs/: index.md  memory_template.md
docs/agents/: app_flow_template.md  backend_structure_template.md  coding_standards_template.md  documentation_guidelines_template.md  file_structure_template.md  frontend_guidelines_template.md  implementation_plan_template.md  testing_guidelines_template.md
scripts/: setup.sh
scripts/tools/: parse_logs.py
src/server/: __init__.py
src/server/config/: __init__.py  config.py  constants.py  settings.py
src/server/logging/: __init__.py  logging.py  metrics.py  telemetry.py  tracing.py
src/server/runtime/: __init__.py  main.py
tests/e2e/: test_smoke.py
(+5 files in other folders)
